yaml-templates/mo-storage-nfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-service
  namespace: XXX
spec:
  ports:
  - name: nfs
    port: 2049
  - name: mountd
    port: 20048
  - name: rpcbind
    port: 111
  selector:
    app: XXX
